[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/zombie_spawn.png" type="Texture" id=1]
[ext_resource path="res://enemies/ZombieSpawn.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 73.5294

[node name="ZombieSpawn" type="StaticBody2D" groups=[
"monster_spawn",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 14.6302, 12.6795 )
shape = SubResource( 1 )

[node name="zombie_spawn" type="Sprite" parent="."]
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
hframes = 4

[node name="SpawnPosition" type="Position2D" parent="."]
position = Vector2( 38.1215, 21.2115 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="EvolveTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true
